SW-9302 - fixed product navigation not showing properly

--- a/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
+++ b/engine/Shopware/Themes/Frontend/Responsive/frontend/_public/src/less/_modules/detail.less
@@ -579,7 +579,7 @@
                 .unitize(200, 16, top);
                 .opacity(0);
                 .linear-gradient-horizontal(#ffffff, #f8f8fa);
-                display: block;
+                display: none;
                 position: absolute;
                 z-index: 2000;
                 border-style: solid;
